@startuml
title Gym Routine Service - Class Diagram

' Activity Classes
class AddExerciseToRoutineActivity {
    - Logger log
    - RoutineDao routineDao
    - ExerciseDao exerciseDao
    + AddExerciseToRoutineActivity(RoutineDao, ExerciseDao)
    + handleRequest(AddExerciseToRoutineRequest, Context): AddExerciseToRoutineResult
}

class CreateRoutineActivity {
    - Logger log
    - RoutineDao routineDao
    + CreateRoutineActivity(RoutineDao)
    + handleRequest(CreateRoutineRequest, Context): CreateRoutineResult
}

class GetRoutineActivity {
    - Logger log
    - RoutineDao routineDao
    + GetRoutineActivity(RoutineDao)
    + handleRequest(GetRoutineRequest, Context): GetRoutineResult
}

class GetRoutineExercisesActivity {
    - Logger log
    - RoutineDao routineDao
    + GetRoutineExercisesActivity(RoutineDao)
    + handleRequest(GetRoutineExercisesRequest, Context): GetRoutineExercisesResult
}

class UpdateRoutineActivity {
    - Logger log
    - RoutineDao routineDao
    + UpdateRoutineActivity(RoutineDao)
    + handleRequest(UpdateRoutineRequest, Context): UpdateRoutineResult
}

' DAO Classes
class ExerciseDao {
    - dynamoDbMapper: DynamoDBMapper
}

class RoutineDao {
    - dynamoDbMapper: DynamoDBMapper
    + RoutineDao(DynamoDBMapper)
    + getRoutine(String): Routine
    + saveRoutine(Routine): void
}
' Exception Classes
class AttributeException extends RuntimeException {
    + AttributeException()
    + AttributeException(String)
    + AttributeException(Throwable)
    + AttributeException(String, Throwable)
}

class InvalidAttributeValueException extends AttributeException {
    + InvalidAttributeValueException()
    + InvalidAttributeValueException(String)
    + InvalidAttributeValueException(Throwable)
    + InvalidAttributeValueException(String, Throwable)
}

class InvalidAttributeChangeException extends AttributeException {
    + InvalidAttributeChangeException()
    + InvalidAttributeChangeException(String)
    + InvalidAttributeChangeException(Throwable)
    + InvalidAttributeChangeException(String, Throwable)
}

class ExerciseNotFoundException extends RuntimeException {
    + ExerciseNotFoundException()
    + ExerciseNotFoundException(String)
    + ExerciseNotFoundException(Throwable)
    + ExerciseNotFoundException(String, Throwable)
}

class RoutineNotFoundException extends RuntimeException {
    + RoutineNotFoundException()
    + RoutineNotFoundException(String)
    + RoutineNotFoundException(Throwable)
    + RoutineNotFoundException(String, Throwable)
}

' DynamoDB Model Classes
class Exercise {
    + @DynamoDBHashKey exerciseId : String
    + exerciseName : String
    + exerciseType : String
}

class Routine {
    + @DynamoDBHashKey id : String
    + name : String
    + customerId : String
    + exerciseCount : Integer
    + tags : Set<String>
    + exerciseList : List<Exercise>
}

' Relationships
AddExerciseToRoutineActivity --> RoutineDao
AddExerciseToRoutineActivity --> ExerciseDao

CreateRoutineActivity --> RoutineDao

GetRoutineActivity --> RoutineDao

GetRoutineExercisesActivity --> RoutineDao

UpdateRoutineActivity --> RoutineDao

Routine --> Exercise : contains

ModelConverter --> Routine
ModelConverter --> RoutineModel

CreateRoutineActivity --> GymRoutineServiceUtils

AddExerciseToRoutineActivity --> InvalidAttributeValueException : throws
UpdateRoutineActivity --> InvalidAttributeChangeException : throws
AttributeException <|-- InvalidAttributeValueException
AttributeException <|-- InvalidAttributeChangeException

@enduml




